\name{InteractionSetnews}
\title{InteractionSet News}
\encoding{UTF-8}

\section{Version 1.1.5}{\itemize{
\item
Fixes to tests and code in response to updates to BiocGenerics, S4Vectors.

\item 
Added CITATION to the F1000Res article.
}}

\section{Version 1.0.0}{\itemize{
\item
New package InteractionSet, containing base classes for genomic interaction data.
}}
